Fixed layout bug in expression preview dialog.
git-svn-id: http://google-refine.googlecode.com/svn/trunk@242 7d457c2a-affb-35e4-300a-418c747d4874

--- a/src/main/webapp/styles/dialogs/expression-preview-dialog.css
+++ b/src/main/webapp/styles/dialogs/expression-preview-dialog.css
@@ -20,7 +20,11 @@ table.expression-preview-layout > tbody > tr:last-child > td {
 textarea.expression-preview-code {
     font-family: monospace;
     height: 5em;
-    width: 100%;
+    margin: 0;
+    padding: 2%;
+    width: 96%;
+    border: 1px solid #aaa;
+    vertical-align: top;
 }
 
 .expression-preview-error-container {
